# commonplace

./: AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  commonplace.json  justfile  test.redb
.beads/: issues.jsonl
.claude/: settings.local.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MACAROONS.md  MQTT.md  SANDBOX_LINKING.md
docs/plans/: 2025-12-29-deprecate-nodes-design.md  2025-12-29-deprecate-nodes-implementation.md  2025-12-29-http-store-split-design.md  2025-12-29-orchestrator-design.md  2025-12-31-directory-attached-processes-design.md  2025-12-31-directory-attached-processes-impl.md  2026-01-02-sandbox-sync-acceptance-criteria.md
docs/test-results/: 2025-12-29-sync-integration-test.txt
examples/: .processes.json
scripts/: integration-test.sh
src/: api.rs  cli.rs  commit.rs  diff.rs  document.rs  lib.rs  main.rs  replay.rs  sse.rs  store.rs  workspace.rs
src/fs/: reconciler.rs
src/http_gateway/: api.rs  mod.rs  sse.rs
src/mqtt/: edits.rs  sync.rs
src/node/: connection_node.rs  document_node.rs  mod.rs  registry.rs  subscription.rs  types.rs
src/orchestrator/: config.rs  discovered_manager.rs  discovery.rs  manager.rs  mod.rs  status.rs
src/router/: manager.rs
src/sync/: content_type.rs  dir_sync.rs  directory.rs  file_sync.rs  mod.rs  state.rs  state_file.rs  urls.rs  yjs.rs
src/ws/: connection.rs  handler.rs  mod.rs  protocol.rs  room.rs
tests/: api_tests.rs  fs_tests.rs  mqtt_path_tests.rs
workspace/: .commonplace.json  content.txt  first_conversation_haiku.txt
workspace/bartleby/: .commonplace.json  history.jsonl  (+1 more)
(+87 files in other folders)
